# oatpp-flatbuffers

./: CMakeLists.txt  README.md  README.zh-CN.md
cmake/: module-config.cmake.in  module-install.cmake  module-utils.cmake
src/: CMakeLists.txt
src/oatpp-flatbuffers/: FlatBuffersWrapper.cpp  FlatBuffersWrapper.hpp  ObjectMapper.cpp  ObjectMapper.hpp
test/: CMakeLists.txt  monster_test.fbs  monster_test_generated.h  monsterdata_test.json  object_mapper_read_test.cc
test/client/: client_main.cc
test/server/: server_main.cc
